static-html/assets/css/style.css
/* ... */
#header .logo img#health {
  margin-top: -1vh;
  max-height: 7vh;
}

#logo-header {
  margin-top: 7vh;
  margin-left: -8vh;
}

#slogans {
  margin-top: -1.5vh;
}

img#who, img#footer-who {
  width: 28vh;
  margin-right: 3vh;
}

.powered-logos {
  margin-top: 7vh;
}

img#unicef, img#footer-unicef {
  width: 18vh;
  margin-right: 3vh;
}

img#unicef2 {
  width: 28vh;
  margin-right: 3vh;
}

img#who2 {
  width: 38vh;
  margin-right: 3vh;
}

#footer-logos {
  display: flex;
  justify-content: center;
  padding: 3vh 0;
  background-color: #1CABE2;
}

#header .logo {
  flex-direction: row;
}

@media (max-width: 992px) {
  #header {
    background: #374EA2;
    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
    color: white;
  }

  .tooltip-response .quickReplies-container .replies {
    display: none
  }

  .testimonials .testimonial-wrap {
    min-width: 100%;
    max-height: 30%;
    margin-left: 0;
  }

  .tooltip-response {
      overflow-y: scroll;
  }

  .messages-container {
    min-height: 85%;
  }

  #header #logoo h1 {
    font-size: 2.5vh;
    padding-top: 2vh;
    padding-left: 1vh;
  }

  #header .logo-img {
    margin-right: 45px;
  }

  #logo-header {
    margin-top: 5vh;
    margin-left: 0;
  }

  #slogans {
    margin-top: -12vh;
  }

  #unicef, #who, #footer-unicef, #footer-who  {
    margin-bottom: 2.5vh;
  }

  .hero-img img {
    padding-top: 3vh;
    max-width: 50%;
  }

  .tooltip-body {
    max-height: 70vh;
  }
}

/*--------------------------------------------------------------
# Navigation Menu
--------------------------------------------------------------*/
/* Desktop Navigation */
.nav-menu, .nav-menu * {
  margin: 0;
  padding: 0;
  list-style: none;
}



.nav-menu > ul > li {
  position: relative;
  white-space: nowrap;
  float: left;
}

.nav-menu a {
  line-height: 2;
  display: block;
  position: relative;
  color: white;
  padding: 8px 15px 12px 15px;
  transition: 0.3s;
  font-size: 14px;
  font-family: "Open Sans", sans-serif;
}

.nav_dropdown {
  position: relative;
  color: white;
  padding: 8px 15px 12px 15px;
  transition: 0.3s;
  font-size: 14px;
  font-family: "Open Sans", sans-serif;
}

.nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a, .nav_dropdown:hover {
  color: white;
  font-weight: bold;
  text-decoration: none;
}

/* Mobile Navigation */
.mobile-nav-toggle {
  position: fixed;
  right: 15px;
  top: 22px;
  z-index: 9998;
  border: 0;
  background: none;
  font-size: 24px;
  transition: all 0.4s;
  outline: none !important;
  line-height: 1;
  cursor: pointer;
  text-align: right;
}

.mobile-nav-toggle i {
  color: white;
}

.mobile-nav {
  position: fixed;
  top: 55px;
  right: 15px;
  bottom: 15px;
  left: 15px;
  z-index: 9999;
  overflow-y: auto;
  background: #fff;
  transition: ease-in-out 0.2s;
  opacity: 0;
  visibility: hidden;
  border-radius: 10px;
  padding: 10px 0;
}

.mobile-nav * {
  margin: 0;
  padding: 0;
  list-style: none;
}

.mobile-nav a {
  display: block;
  position: relative;
  color: #47536e;
  padding: 10px 20px;
  font-weight: 500;
  outline: none;
}

.mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
  color: #1CABE2;
  text-decoration: none;
}

.mobile-nav .drop-down > a:after {
  content: "\ea99";
  font-family: IcoFont;
  padding-left: 10px;
  position: absolute;
  right: 15px;
}

.mobile-nav .active.drop-down > a:after {
  content: "\eaa1";
}

.mobile-nav .drop-down > a {
  padding-right: 35px;
}

.mobile-nav .drop-down ul {
  display: none;
  overflow: hidden;
}

.mobile-nav .drop-down li {
  padding-left: 20px;
}

.mobile-nav-overly {
  width: 100%;
  height: 100%;
  z-index: 9997;
  top: 0;
  left: 0;
  position: fixed;
  background: rgba(35, 51, 85, 0.7);
  overflow: hidden;
  display: none;
  transition: ease-in-out 0.2s;
}

.mobile-nav-active {
  overflow: hidden;
}

.mobile-nav-active .mobile-nav {
  opacity: 1;
  visibility: visible;
}

.mobile-nav-active .mobile-nav-toggle i {
  color: #fff;
}

/*--------------------------------------------------------------
# Hero Section
--------------------------------------------------------------*/
#hero {
  width: 100%;
  position: relative;
  overflow: hidden;
  padding: 10vh 0 0 0;
  min-height: 52vh;
}

.conversation-container .reply {
  min-width: 95%;
  justify-content: center;
  text-align: center;
  align-self: center;
}

#hero::before {
  content: '';
  position: absolute;
  right: -100%;
  top: 20%;
  width: 230%;
  height: 200%;
  z-index: -1;
  background-color: rgba(28,171,226,0.2);
  transform: skewY(145deg);
}

#hero h1 {
  margin: 11vh 0 2vh 0;
  font-size: 38px;
  font-weight: 500;
  line-height: 56px;
  color: #1CABE2;
  font-family: "Poppins", sans-serif;
}

#hero h2 {
  color: #777779;
  margin-bottom: 1vh;
  font-size: 18px;
}

#hero .download-btn {
  font-family: "Raleway", sans-serif;
  font-weight: 500;
  font-size: 15px;
  display: inline-block;
  padding: 8px 24px 10px 46px;
  border-radius: 3px;
  transition: 0.5s;
  color: #fff;
  background: #47536e;
  position: relative;
}

#hero .download-btn:hover {
  background: #1CABE2;
}

#hero .download-btn i {
  font-size: 20px;
  position: absolute;
  left: 18px;
  top: 8.5px;
}

#hero .download-btn + .download-btn {
  margin-left: 20px;
}

#hero .hero-img img {
  width: 26vh;
}

@media (max-width: 991px) {
  #hero {
    text-align: center;
  }
  #hero .download-btn + .download-btn {
    margin: 0 10px;
  }
  #hero .hero-img {
    text-align: center;
  }
  #hero .hero-img img {
    width: 40%;
  }
}

@media (max-width: 768px) {
  #hero h1 {
    font-size: 28px;
    line-height: 36px;
  }
  #hero h2 {
    font-size: 18px;
    line-height: 24px;
    margin-bottom: 30px;
  }
  #hero .hero-img img {
    width: 70%;
  }
}

@media (max-width: 575px) {
  #hero .hero-img img {
    width: 80%;
  }
}
/* ... */

